# TransitOps

./: .gitignore  AGENTS.md  LICENSE  README.md  package.json
apps/api/: .gitignore  AGENTS.md  pyproject.toml  trigger_seed.py
apps/api/alembic/: env.py
apps/api/app/: database.py  main.py  models.py  seed.py
apps/api/app/analytics/: __init__.py  routes.py
apps/api/app/auth/: permissions.py  routes.py  schemas.py  service.py
apps/api/app/drivers/: __init__.py  routes.py  schemas.py
apps/api/app/expenses/: __init__.py  routes.py  schemas.py
apps/api/app/fuel_logs/: __init__.py  routes.py  schemas.py
apps/api/app/maintenance/: __init__.py  routes.py  schemas.py
apps/api/app/models/: __init__.py  auth.py  fleet.py
apps/api/app/trips/: __init__.py  routes.py  schemas.py
apps/api/app/vehicles/: __init__.py  routes.py  schemas.py
apps/marketing/: .gitignore  package.json
apps/marketing/app/: globals.css  layout.tsx  page.tsx
apps/marketing/app/login/: page.tsx
apps/marketing/app/register/: page.tsx
apps/marketing/components/: auth-form.tsx
apps/web/: .gitignore  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: auth-guard.tsx  fleet-stats-cards.tsx  fleet-trend-chart.tsx  resource-guard.tsx  stats13.tsx  status-badge.tsx  vehicle-status-pie.tsx
apps/web/contexts/: auth-context.tsx
apps/web/hooks/: use-fetch.ts
apps/web/lib/: api.ts  rbac.ts
apps/web/services/: analytics.ts  auth.ts  drivers.ts  expenses.ts  fuel-logs.ts  maintenance.ts  trips.ts  vehicles.ts
(+19 files in other folders)
